--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
             <a class="nav-link js-scroll" href="#blog">Projects</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll" href="#awards">Awards</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll" href="#work">Gallery</a>
           </li>
           <li class="nav-item">
@@ -1153,7 +1156,7 @@
     </section>
   <!--/ Section Blog End /-->
   <!-- Section Awards Start-->
-      <Section class="awards reveal">
+      <Section class="awards reveal" id="awards">
         <div class="container carousel">
           <div class="row">
             <div class="col-sm-12">
