--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="col-sm-12">
           <div class="box-shadow-full">
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-xl-6 col-lg-6 col-md-12">
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
@@ -135,7 +135,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-6">
+              <div class="col-xl-6 col-lg-6 col-md-12">
                 <div class="about-me pt-4 pt-md-0">
                   <div class="title-box-2">
                     <h5 class="title-left">
