--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                 Projects
               </h3>
               <p class="subtitle-a">
-                These are some of the projects that I worked on throughout the last 5 years.
+                These are some of the projects that I worked on throughout the last 5 years (More details are in Progress).
               </p>
               <div class="line-mf"></div>
             </div>
@@ -611,9 +611,7 @@
                 </div>
                 <h3 class="card-title"><a href="">The Very First bootstrap website</a></h3>
                 <p class="card-description">
-                  Proin eget tortor risus. Pellentesque in ipsum id orci porta dapibus. Praesent sapien massa, convallis
-                  a pellentesque nec,
-                  egestas non nisi.
+                  This task was the final after more than a month of learning CSS3 and Bootstrap, and it was the most difficult of its kind due to the large number of details in it.
                 </p>
               </div>
               <div class="card-footer">
@@ -642,9 +640,7 @@
                 </div>
                 <h3 class="card-title"><a href="">IEEE Website</a></h3>
                 <p class="card-description">
-                  Proin eget tortor risus. Pellentesque in ipsum id orci porta dapibus. Praesent sapien massa, convallis
-                  a pellentesque nec,
-                  egestas non nisi.
+                  After weeks of training for pure HTML and CSS, I built this website under with IEEE. It was the first for me in dealing with some new items like carousels and animations.
                 </p>
               </div>
               <div class="card-footer">
@@ -884,7 +880,7 @@
                 <h3 class="card-title"><a href="">Oruba Vertical Lift Bridge</a></h3>
                 <p class="card-description">
                   Traffic congestion in the Orouba Tunnel area in Cairo is a lot, 
-                  so this project provides a moving vertical bridge mechanism for distributing cars on three roads.
+                  so this project provides a moving vertical bridge mechanism for distributing cars on three roads: Bridge, tunnel and highway.
                 </p>
               </div>
               <div class="card-footer">
