--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                 Projects
               </h3>
               <p class="subtitle-a">
-                These are some of the projects that I worked on throughout the last 5 years (More details are in Progress).
+                These are some of the projects that I worked on throughout the last 5 years.
               </p>
               <div class="line-mf"></div>
             </div>
@@ -482,7 +482,7 @@
           <div class="col-md-4 reveal">
             <div class="card card-blog">
               <div class="card-img">
-                <a href=""><img src="MicroMouse/IMG-20220803-WA0007.jpg" alt="" class="img-fluid"></a>
+                <a href="https://drive.google.com/file/d/1FnWRjXGVUQbfnd9y5VChSK_ocFMChIM6/view?usp=sharing"><img src="MicroMouse/IMG-20220803-WA0007.jpg" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -512,7 +512,7 @@
           <div class="col-md-4 reveal">
             <div class="card card-blog">
               <div class="card-img">
-                <a href=""><img src="FLL/2020/IMG-20200223-WA0012.jpg" alt="" class="img-fluid"></a>
+                <a href="https://drive.google.com/file/d/1FnWRjXGVUQbfnd9y5VChSK_ocFMChIM6/view?usp=sharing"><img src="FLL/2020/IMG-20200223-WA0012.jpg" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -542,7 +542,7 @@
           <div class="col-md-4 reveal">
             <div class="card card-blog">
               <div class="card-img">
-                <a href=""><img src="FLL/2022/IMG-20220219-WA0017.jpg" alt="" class="img-fluid"></a>
+                <a href="https://drive.google.com/file/d/1FnWRjXGVUQbfnd9y5VChSK_ocFMChIM6/view?usp=sharing"><img src="FLL/2022/IMG-20220219-WA0017.jpg" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -572,7 +572,7 @@
           <div class="col-md-4 reveal">
             <div class="card card-blog">
               <div class="card-img">
-                <a href=""><img src="FLL/2022/PIDforDummies_pid_simplified.png" alt="" class="img-fluid"></a>
+                <a href="https://drive.google.com/file/d/1FZWn4sb_McEGZQdADYHj_XEDgC6Xvq8E/view?usp=sharing"><img src="FLL/2022/PIDforDummies_pid_simplified.png" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -601,7 +601,7 @@
           <div class="col-md-4 reveal">
             <div class="card card-blog">
               <div class="card-img">
-                <a href=""><img src="Websites/Web Task2/Capture (1).png" alt="" class="img-fluid"></a>
+                <a href="https://drive.google.com/file/d/1FnWRjXGVUQbfnd9y5VChSK_ocFMChIM6/view?usp=sharing"><img src="Websites/Web Task2/Capture (1).png" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -630,7 +630,7 @@
           <div class="col-md-4 reveal">
             <div class="card card-blog">
               <div class="card-img">
-                <a href=""><img src="IEEE/IEEE Task 3/Capture.PNG" alt="" class="img-fluid"></a>
+                <a href="https://drive.google.com/file/d/1FnWRjXGVUQbfnd9y5VChSK_ocFMChIM6/view?usp=sharing"><img src="IEEE/IEEE Task 3/Capture.PNG" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -659,7 +659,7 @@
           <div class="col-md-4 reveal">
             <div class="card card-blog">
               <div class="card-img">
-                <a href=""><img src="Projects/IoT 1/image.jpg" alt="" class="img-fluid"></a>
+                <a href="https://drive.google.com/file/d/1FnWRjXGVUQbfnd9y5VChSK_ocFMChIM6/view?usp=sharing"><img src="Projects/IoT 1/image.jpg" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -689,7 +689,7 @@
           <div class="col-md-4 reveal">
             <div class="card card-blog">
               <div class="card-img">
-                <a href=""><img src="Projects/IoT 2/IMG-20220823-WA00487.jpg" alt="" class="img-fluid"></a>
+                <a href="https://drive.google.com/file/d/1FnWRjXGVUQbfnd9y5VChSK_ocFMChIM6/view?usp=sharing"><img src="Projects/IoT 2/IMG-20220823-WA00487.jpg" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -719,7 +719,7 @@
           <div class="col-md-4 reveal">
             <div class="card card-blog">
               <div class="card-img">
-                <a href=""><img src="Projects/Diamond/24 (1).jpg" alt="" class="img-fluid"></a>
+                <a href="https://drive.google.com/file/d/1FnWRjXGVUQbfnd9y5VChSK_ocFMChIM6/view?usp=sharing"><img src="Projects/Diamond/24 (1).jpg" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -749,7 +749,7 @@
           <div class="col-md-4 reveal">
             <div class="card card-blog">
               <div class="card-img">
-                <a href=""><img src="Projects/Cap 2.2/IMG2022052190918223.jpg" alt="" class="img-fluid"></a>
+                <a href="https://drive.google.com/file/d/1FnWRjXGVUQbfnd9y5VChSK_ocFMChIM6/view?usp=sharing"><img src="Projects/Cap 2.2/IMG2022052190918223.jpg" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -779,7 +779,7 @@
           <div class="col-md-4 reveal">
             <div class="card card-blog">
               <div class="card-img">
-                <a href=""><img src="Can Sat/IMG202209191330411.jpg" alt="" class="img-fluid"></a>
+                <a href="https://drive.google.com/file/d/1FnWRjXGVUQbfnd9y5VChSK_ocFMChIM6/view?usp=sharing"><img src="Can Sat/IMG202209191330411.jpg" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -809,7 +809,7 @@
           <div class="col-md-4 reveal">
             <div class="card card-blog">
               <div class="card-img">
-                <a href=""><img src="Projects/FLL projects/IMG-20221124-WA0005.jpg" alt="" class="img-fluid"></a>
+                <a href="https://drive.google.com/file/d/1FnWRjXGVUQbfnd9y5VChSK_ocFMChIM6/view?usp=sharing"><img src="Projects/FLL projects/IMG-20221124-WA0005.jpg" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -839,7 +839,7 @@
           <div class="col-md-4 reveal">
             <div class="card card-blog">
               <div class="card-img">
-                <a href=""><img src="Projects/FLL projects/fll2019 (1).jpg" alt="" class="img-fluid"></a>
+                <a href="https://drive.google.com/file/d/1FnWRjXGVUQbfnd9y5VChSK_ocFMChIM6/view?usp=sharing"><img src="Projects/FLL projects/fll2019 (1).jpg" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -869,7 +869,7 @@
           <div class="col-md-4 reveal">
             <div class="card card-blog">
               <div class="card-img">
-                <a href=""><img src="Projects/FLL projects/FLL2020 (1).jpg" alt="" class="img-fluid"></a>
+                <a href="https://drive.google.com/file/d/1FnWRjXGVUQbfnd9y5VChSK_ocFMChIM6/view?usp=sharing"><img src="Projects/FLL projects/FLL2020 (1).jpg" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -899,7 +899,7 @@
           <div class="col-md-4 reveal">
             <div class="card card-blog">
               <div class="card-img">
-                <a href=""><img src="Cyper/hack (1).png" alt="" class="img-fluid"></a>
+                <a href="https://drive.google.com/file/d/1FnWRjXGVUQbfnd9y5VChSK_ocFMChIM6/view?usp=sharing"><img src="Cyper/hack (1).png" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
